<resources>
    <string name="app_name">PetPot</string>
    <string name="menu_home_board">Home</string>

    <!--Nav target label-->
    <string name="search">Search</string>
    <string name="about_us">About Us</string>
    <string name="favourite">Favorite</string>
    <string name="organisation">Organisations</string>
    <string name="hint_search">City/State/postal code</string>
    <string name="nav_animal_details_label">Details</string>

    <string name="retry">Retry</string>
    <string name="menu_gender">Gender</string>
    <string name="menu_color">Color</string>
    <string name="menu_breed">Breed</string>
    <string name="menu_coat">Coat</string>
    <string name="menu_age">Age</string>
    <string name="menu_size">Size</string>
    <string name="menu_status">Status</string>
    <string name="i_am_alone">I am alone!</string>
    <string name="reset_filter">Rest Filter And Try again</string>
    <string name="please_star">Find me friends by clicking on Heart \u2661 while searching</string>

    <string name="something_went_wrong">Oops! Something is broken</string>
    <string name="please_try_again">Please try again</string>
    <string name="no_internet">Slow or No Internet !</string>
    <string name="no_internet_subtitle">Please check your network connection \n and try again.</string>
    <string name="non_serving_location">Our service is not enabled for entered location
        yet!</string>
    <string name="age_breed">%1$s • %2$s</string>
    <string name="about">About</string>
    <string name="meet">Meet %1$s</string>
    <string name="un_known">Unknown</string>
    <string name="mix">Mix</string>
    <string name="vacci_upto_date">Vaccinations up to date</string>
    <string name="spayed_neutered">Spayed / neutered.</string>
    <string name="de_clawed">De-clawed</string>
    <string name="other_dogs">Other dogs</string>
    <string name="dogs">Dogs</string>
    <string name="other_cats">Other cats</string>
    <string name="cats">Cats</string>
    <string name="children">Children</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="bottom_nav_drawer_image_content_desc">profile avatar image</string>
    <string name="fab_search_filter_content_description">Filter search</string>
    <string name="fab_delete_all_favorite">Reply to email</string>
    <string name="fab_rate_us_description">Rate Us</string>
    <string name="fab_organisation_filter">Organisation Filters</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="go_to_search">To search</string>
    <string name="remove_bookmark">Pet  removed from favorite</string>
    <string name="undo">Undo</string>
    <string name="clear_pets">Are you sure?\nNot recoverable, still Want to delete all the
        favourite pets</string>
    <string name="search_filters">Search Filters</string>
    <string name="no_items_found">No items found</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset">Reset</string>
    <string name="recent">Recent</string>
    <string name="distance">Distance</string>
    <string name="you_ll_also_like">You\'ll Also Like</string>
    <string name="breed">breed:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="size">Size:</string>
    <string name="address">Address:</string>
    <string name="coat_length">Coat Length:</string>
    <string name="house_trained">House Trained:</string>
    <string name="health">Health:</string>
    <string name="good_with">Good with:</string>
    <string name="characteristics">Characteristics:</string>

    <string name="transition_pet_card">transition_pet_card_%1$s</string>
    <string name="write_mail_to_team">Write a mail to Team</string>
    <string name="call_shelter">Call Pet Shelter</string>
    <string name="write_mail_to_shelter_team">Write a mail to Shelter team</string>
    <string name="summary_app_version">About current app version</string>
    <string name="title_app_version">App Version</string>
    <string name="category_personal">Personal</string>

    <string name="title_search_limit">Search Items limit</string>
    <string name="category_search">Search</string>
    <string name="title_choose_theme">Choose Theme</string>
    <string name="action_view">actionView</string>
    <string name="about_us_info"><![CDATA[<p>
    PetPot is Free to use app build by Droid47 for Pet lovers inorder to provide new home for homeless pet.
    The search engine is <b>Powered by petfinder.com</b>
    <a href="https://www.petfinder.com" target="_blank">petfinder.com</a>.</p>
    <p>Petfinder is an online, searchable database of animals who need homes. It is also a directory of
    nearly 11,000 animal shelters and adoption organizations across the U.S., Canada and Mexico.
    Organizations maintain their own home pages and available-pet databases.</p>
    ]]></string>
    <string name="my_email">droidz047@gmail.com</string>
    <string name="search_order">Search result order</string>
    <string name="no_animal_found">No pet found!</string>
    <string name="loperum_sum_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
    posuere ultrices quam, eget scelerisque quam suscipit ac.</string>
    <string name="previous">Prev</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="i_accept">I accept</string>
    <string name="share_pet_details">Share Pet Details</string>
    <string name="check_cute_one">Hey, check this cute fellow</string>
    <string name="share_with">Share with</string>
    <string name="rate_app">Rate us</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="version_key">upgrade_version_%s</string>
    <string name="update_downloaded">An update has just been downloaded.</string>
    <string name="restart">Restart</string>
    <string name="try_other_location">Please try other location</string>
    <string name="to_map">Map</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="post_code">Post code:</string>
    <string name="country">Country:</string>
    <string name="to_settings">To Settings</string>
    <string name="non_active_connection">Offline, No active internet connection</string>
    <string name="active_connection">Online, Has active internet connection</string>
    <string name="notification_favourite_content_title">Hi, Its %1$s here</string>
    <string name="notification_favourite_content_text">Please make me your friend</string>
    <string name="notification_content_title">Planning to adopt a Pet?</string>
    <string name="notification_content_text">Search and find right friend for you</string>
    <string name="launcher_transition">launcher_transition</string>
    <string name="activity_transition">activity_transition</string>
    <string name="onboarding_page_app_desc">Provide new home for homeless pet, adopt and
        love them</string>
    <string name="onboarding_page_search_desc">Search and read pet bios that best matches
        your needs </string>
    <string name="onboarding_page_fav_desc">Add matching pet to your favourite list</string>
    <string name="onboarding_page_app_tite">App for pet lovers</string>
    <string name="onboarding_page_search_tite">Find right pet</string>
    <string name="onboarding_page_fav_tite">Save favorites</string>
    <string name="add">Add Shelters</string>
    <string name="our_mission">Our Mission</string>
    <string name="our_policy">Our Policy</string>
    <string name="organization_name">Organization Name</string>
    <string name="transition_organization">transition_organization</string>
    <string name="transition_fab">transition_fab</string>
    <string name="transition_filter">transition_filter</string>
    <string name="transition_bottom_dialog">transition_bottom_dialog</string>
    <string name="please_wait">Please wait!</string>
    <string name="get_start">Get Started</string>
    <string name="dual_color_app_name">"<![CDATA[<font color=#121212>Pet</font> <font color=#ffffff>Pot</font>]]></string>
    <string name="notification_enabled">Notification Enabled</string>
    <string name="notification_disabled">Notification Disabled</string>
    <string name="category_app_info">App info</string>
    <string name="choose_theme">Choose theme</string>

    <!--Setting screen-->
    <string name="key_app_version">key_app_version</string>
    <string name="key_current_theme">current_theme</string>
    <string name="key_search_limit">search_limit</string>
    <string name="key_notification_enabled">Notification Enabled</string>
    <string name="powered_by_petfinder">Powered by petfinder.com</string>

    <string name="pet_notification_default_channel_id">Pet Notification Channel Id</string>
    <string name="privacy_policies">Privacy Policy</string>
    <string name="turn_location">Turn on location</string>
    <string name="bottom_nav">bottom_nav</string>
    <string name="desc_add_to_favourite_list">Desc Add To Favourite List</string>
    <string name="desc_open_filters">Desc Open Filters</string>
    <string name="desc_clear_location">Desc Clear Location</string>
    <string name="desc_app_logo">Desc App Logo</string>
    <string name="desc_favourite_pet_bg">Desc Favourite Pet bg</string>
    <string name="desc_favourite_pet">Desc Favourite Pet</string>
    <string name="desc_pet_image">Desc Pet Image</string>
    <string name="dec_app_onboarding">Desc App Onboarding</string>
</resources>
