<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/vc_search"
            android:title="@string/search" />

        <item
            android:id="@+id/navigation_bookmark_pet"
            android:icon="@drawable/vc_favorite"
            android:title="@string/favourite" />

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/vc_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/navigation_about_us"
            android:icon="@drawable/vc_info"
            android:title="@string/about_us" />

    </group>
</menu>