<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:padding="@dimen/grid_1">

        <!--        <View-->
        <!--            android:id="@+id/scrim_view"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:alpha="0"-->
        <!--            android:background="?attr/scrimBackground"-->
        <!--            android:visibility="gone" />-->

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/grid_2"
            android:text="@string/clear_pets"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Are you sure?" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_primary_action"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            android:minWidth="@dimen/btn_min_size"
            android:padding="@dimen/grid_1"
            android:text="@string/yes"
            android:textAppearance="?attr/textAppearanceButton"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_secondary_action"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_1"
            android:minWidth="@dimen/btn_min_size"
            android:padding="@dimen/grid_1"
            android:text="@string/no"
            android:textAppearance="?attr/textAppearanceButton"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_primary_action"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>