<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.droid47.petfriend.base.widgets.Loading" />

        <import type="com.droid47.petfriend.base.widgets.Success" />

        <import type="com.droid47.petfriend.base.widgets.Empty" />

        <import type="com.droid47.petfriend.base.widgets.Failure" />

        <variable
            name="bookmarkViewModel"
            type="com.droid47.petfriend.search.presentation.viewmodel.BookmarkViewModel" />

        <variable
            name="errorStateConfig"
            type="com.droid47.petfriend.base.bindingConfig.ErrorViewConfiguration" />

        <variable
            name="emptyStateConfig"
            type="com.droid47.petfriend.base.bindingConfig.EmptyScreenConfiguration" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cdl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingTop="@dimen/grid_4"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/tool_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
                app:titleEnabled="false">

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/fl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:paddingBottomSystemWindowInsets="@{true}"
            app:paddingTopSystemWindowInsets="@{true}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="@dimen/grid_12"
                android:scrollbars="none"
                app:fastScrollEnabled="true"
                app:fastScrollHorizontalThumbDrawable="@drawable/fast_scroll_thumb_drawable"
                app:fastScrollHorizontalTrackDrawable="@drawable/fast_scroll_line_drawable"
                app:fastScrollVerticalThumbDrawable="@drawable/fast_scroll_thumb_drawable"
                app:fastScrollVerticalTrackDrawable="@drawable/fast_scroll_line_drawable"
                app:hasFixedSize="@{true}"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_anchor="@+id/fl_container"
                app:layout_anchorGravity="center"
                app:spanCount="1"
                app:animateVisible="@{bookmarkViewModel.bookmarkListLiveData instanceof Success}"
                tools:listitem="@layout/item_book_mark"
                tools:visibility="visible" />

            <include
                android:id="@+id/layout_error"
                layout="@layout/layout_error_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/grid_12"
                app:errorViewConfig="@{errorStateConfig}"
                app:animateVisible="@{bookmarkViewModel.bookmarkListLiveData instanceof Failure}"
                tools:visibility="gone" />

            <include
                android:id="@+id/layout_empty"
                layout="@layout/layout_empty_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/grid_12"
                app:emptyViewConfig="@{emptyStateConfig}"
                app:animateVisible="@{bookmarkViewModel.bookmarkListLiveData instanceof Empty}"
                tools:visibility="gone" />

        </FrameLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:minHeight="@dimen/grid_6"
            app:contentInsetEnd="@dimen/zero"
            app:contentInsetStart="@dimen/zero"
            app:elevation="@dimen/plane_08"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="@dimen/bottom_app_bar_fab_cradle_margin"
            app:fabCradleRoundedCornerRadius="@dimen/bottom_app_bar_fab_cradle_corner_radius"
            app:fullScreenBottomPadding="@{true}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/csl_bottom_bar_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_nav_search"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite"
                    android:textColor="?attr/colorOnPrimarySurface"
                    app:icon="@drawable/vc_nav_menu"
                    app:iconTint="?attr/colorOnPrimarySurface"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fab_rate_us_description"
            android:elevation="@dimen/plane_06"
            app:fabSize="normal"
            app:layout_anchor="@id/bottom_app_bar"
            app:srcCompat="@drawable/vc_delete_sweep" />

        <View
            android:id="@+id/scrim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/grid_6"
            android:background="?attr/scrimBackground"
            android:contentDescription="@string/fab_search_filter_content_description"
            android:visibility="invisible" />

<!--        <com.google.android.material.circularreveal.cardview.CircularRevealCardView-->
<!--            android:id="@+id/cv_delete_favorite"-->
<!--            style="@style/Widget.MaterialComponents.CardView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="bottom"-->
<!--            android:layout_marginBottom="@dimen/grid_6"-->
<!--            android:visibility="invisible"-->
<!--            app:cardBackgroundColor="?attr/colorSurface"-->
<!--            app:cardElevation="@dimen/zero"-->
<!--            app:cardPreventCornerOverlap="true"-->
<!--            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.pet.LargeComponent.Top">-->

            <include
                android:id="@+id/layout_delete_pet"
                layout="@layout/dialog_fragment_delete_pets" />

<!--        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>-->


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>